@@ -1,3 +1,9 @@
+2009-04-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* classProvider.c, classProviderGz.c:
+	[ 2727841 ] Memory Leak is in gatherNameSpaces in classProvider
+	Redo fix for failure on certain distros.
+
 2009-05-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* test/xmltest/xmltest.sh
